fix: Table header icons still not properly aligned

--- a/styles/less/components/application.less
+++ b/styles/less/components/application.less
@@ -464,6 +464,7 @@
 					display: flex;
 					font-weight: bold;
 					gap: 4px;
+					line-height: 1;
 					overflow: hidden;
 					padding: 4px;
 					scrollbar-gutter: stable;
@@ -475,7 +476,7 @@
 						display: block;
 
 						& .fa-solid, & .fas {
-							vertical-align: top;
+							vertical-align: middle;
 						}
 					}
 
